cmake_minimum_required(VERSION 2.8)
project(rtp_tester)
add_executable(main main.cpp)
set(RTP_HDR "/usr/local/include/jrtplib3")
set(RTP_LIB "/usr/local/lib64")
include_directories("${RTP_HDR}")
link_directories("${RTP_LIB}")
find_library(jrtp rt /usr/local/lib64)
find_library(pthread rt /usr/local/lib64)
target_link_libraries(main jrtp)
target_link_libraries(main pthread)

